Create integration plugin and move tests in it
Change-Id: I7d44f0bff77612e8d0384089d7e08829e7ef5b2d
Signed-off-by: Marc-Andre Laperle <marc-andre.laperle@ericsson.com>