@@ -7,25 +7,21 @@
  * http://www.eclipse.org/legal/epl-v10.html
  *******************************************************************************/
 
-package org.eclipse.tracecompass.tmf.ui.swtbot.tests.projectexplorer;
+package org.eclipse.tracecompass.integration.swtbot.tests.packageexplorer;
 
 import static org.junit.Assert.assertEquals;
 import static org.junit.Assert.assertTrue;
-import static org.junit.Assert.fail;
 
 import java.io.File;
 import java.io.IOException;
-import java.net.URI;
-import java.net.URISyntaxException;
-import java.net.URL;
 import java.util.List;
 
 import org.apache.log4j.ConsoleAppender;
 import org.apache.log4j.Logger;
 import org.apache.log4j.SimpleLayout;
 import org.eclipse.core.resources.ResourcesPlugin;
-import org.eclipse.core.runtime.FileLocator;
 import org.eclipse.core.runtime.Path;
+import org.eclipse.jdt.annotation.NonNull;
 import org.eclipse.swtbot.eclipse.finder.SWTWorkbenchBot;
 import org.eclipse.swtbot.eclipse.finder.widgets.SWTBotEditor;
 import org.eclipse.swtbot.eclipse.finder.widgets.SWTBotView;
@@ -39,7 +35,7 @@ import org.eclipse.swtbot.swt.finder.widgets.SWTBotShell;
 import org.eclipse.swtbot.swt.finder.widgets.SWTBotTable;
 import org.eclipse.swtbot.swt.finder.widgets.SWTBotText;
 import org.eclipse.swtbot.swt.finder.widgets.SWTBotTreeItem;
-import org.eclipse.tracecompass.tmf.core.tests.TmfCoreTestPlugin;
+import org.eclipse.tracecompass.tmf.core.parsers.custom.CustomTxtTraceDefinition;
 import org.eclipse.tracecompass.tmf.core.trace.TmfTraceManager;
 import org.eclipse.tracecompass.tmf.ui.swtbot.tests.shared.ConditionHelpers;
 import org.eclipse.tracecompass.tmf.ui.swtbot.tests.shared.SWTBotUtils;
@@ -58,11 +54,12 @@ import com.google.common.collect.ImmutableList;
  */
 @RunWith(SWTBotJunit4ClassRunner.class)
 public class ProjectExplorerTraceActionsTest {
+    private static @NonNull TestTraceInfo CUSTOM_TEXT_LOG = new TestTraceInfo("ExampleCustomTxt.log", "Custom Text : TmfGeneric", 10, "29:52.034");
     private static final String TRACE_PROJECT_NAME = "test";
-    private static final String TRACE_NAME = "syslog_collapse";
+    private static final String TRACE_NAME = CUSTOM_TEXT_LOG.getTraceName();
     private static final String RENAMED_TRACE_NAME = TRACE_NAME + 2;
-    private static final String TRACE_PATH = "testfiles/" + TRACE_NAME;
-    private static final String TRACE_TYPE = "org.eclipse.linuxtools.tmf.tests.stubs.trace.text.testsyslog";
+//    private static final String TRACE_PATH = "testfiles/" + TRACE_NAME;
+//    private static final String TRACE_TYPE = "org.eclipse.linuxtools.tmf.tests.stubs.trace.text.testsyslog";
 
     private static File fTestFile = null;
 
@@ -70,25 +67,30 @@ public class ProjectExplorerTraceActionsTest {
 
     /** The Log4j logger instance. */
     private static final Logger fLogger = Logger.getRootLogger();
-    private static final long NB_EVENTS = 22;
+
+    private static final File TEST_TRACES_PATH = new File(new Path(TmfTraceManager.getTemporaryDirPath()).append("testtraces").toOSString());
+    private static String getPath(String relativePath) {
+        return new Path(TEST_TRACES_PATH.getAbsolutePath()).append(relativePath).toOSString();
+    }
 
     /**
      * Test Class setup
+     *
+     * @throws IOException
+     *             on error
      */
     @BeforeClass
-    public static void init() {
+    public static void init() throws IOException {
+        TestDirectoryStructureUtil.generateTraceStructure(TEST_TRACES_PATH);
+
         SWTBotUtils.initialize();
 
+
+        // FIXME: We can't use Manage Custom Parsers > Import because it uses a native dialog. We'll still check that they show up in the dialog
+        CustomTxtTraceDefinition[] txtDefinitions = CustomTxtTraceDefinition.loadAll(getPath("customParsers/ExampleCustomTxtParser.xml"));
+        txtDefinitions[0].save();
         /* set up test trace */
-        URL location = FileLocator.find(TmfCoreTestPlugin.getDefault().getBundle(), new Path(TRACE_PATH), null);
-        URI uri;
-        try {
-            uri = FileLocator.toFileURL(location).toURI();
-            fTestFile = new File(uri);
-        } catch (URISyntaxException | IOException e) {
-            e.printStackTrace();
-            fail();
-        }
+        fTestFile = new File(getPath(new Path("import").append(CUSTOM_TEXT_LOG.getTracePath()).toString()));
 
         assertTrue(fTestFile.exists());
 
@@ -131,15 +133,13 @@ public class ProjectExplorerTraceActionsTest {
      */
     @Test
     public void test4_01ContextMenuPresence() {
-        SWTBotUtils.openTrace(TRACE_PROJECT_NAME, fTestFile.getAbsolutePath(), TRACE_TYPE);
+        SWTBotUtils.openTrace(TRACE_PROJECT_NAME, fTestFile.getAbsolutePath(), CUSTOM_TEXT_LOG.getTraceType());
         SWTBotTreeItem traceItem = SWTBotUtils.getTraceProjectItem(fBot, SWTBotUtils.selectTracesFolder(fBot, TRACE_PROJECT_NAME), TRACE_NAME);
 
-        final List<String> EXPECTED_MENU_LABELS = ImmutableList.of(
-                "Open", "Open With", "Copy...", "Rename...", "Delete", "Delete Supplementary Files...", "Export Trace Package...", "Select Trace Type...", "Apply Time Offset...", "Clear Time Offset",
-                "Refresh");
-
-        List<String> menuLabels = traceItem.contextMenu().menuItems();
-        assertEquals(EXPECTED_MENU_LABELS, menuLabels);
+        final List<String> EXPECTED_MENU_LABELS = ImmutableList.of("Open", "Open With", "", "Copy...", "Rename...", "Delete", "", "Delete Supplementary Files...", "", "Export Trace Package...", "", "Select Trace Type...", "", "Apply Time Offset...",
+                "Clear Time Offset", "", "Refresh");
+        List<String> menuItems = traceItem.contextMenu().menuItems();
+        assertEquals(EXPECTED_MENU_LABELS, menuItems);
 
         fBot.closeAllEditors();
     }
@@ -157,7 +157,7 @@ public class ProjectExplorerTraceActionsTest {
     @Test
     public void test4_02Open() {
         //FIXME: double opening! not testing properly!
-        SWTBotUtils.openTrace(TRACE_PROJECT_NAME, fTestFile.getAbsolutePath(), TRACE_TYPE);
+        SWTBotUtils.openTrace(TRACE_PROJECT_NAME, fTestFile.getAbsolutePath(), CUSTOM_TEXT_LOG.getTraceType());
         SWTBotTreeItem traceItem = SWTBotUtils.getTraceProjectItem(fBot, SWTBotUtils.selectTracesFolder(fBot, TRACE_PROJECT_NAME), TRACE_NAME);
 
         traceItem.contextMenu().menu("Open").click();
@@ -178,7 +178,7 @@ public class ProjectExplorerTraceActionsTest {
      */
     @Test
     public void test4_03Copy() {
-        SWTBotUtils.openTrace(TRACE_PROJECT_NAME, fTestFile.getAbsolutePath(), TRACE_TYPE);
+        SWTBotUtils.openTrace(TRACE_PROJECT_NAME, fTestFile.getAbsolutePath(), CUSTOM_TEXT_LOG.getTraceType());
         SWTBotTreeItem traceItem = SWTBotUtils.getTraceProjectItem(fBot, SWTBotUtils.selectTracesFolder(fBot, TRACE_PROJECT_NAME), TRACE_NAME);
 
         createCopy(traceItem);
@@ -202,7 +202,7 @@ public class ProjectExplorerTraceActionsTest {
      */
     @Test
     public void test4_04Rename() {
-        SWTBotUtils.openTrace(TRACE_PROJECT_NAME, fTestFile.getAbsolutePath(), TRACE_TYPE);
+        SWTBotUtils.openTrace(TRACE_PROJECT_NAME, fTestFile.getAbsolutePath(), CUSTOM_TEXT_LOG.getTraceType());
         SWTBotTreeItem traceItem = SWTBotUtils.getTraceProjectItem(fBot, SWTBotUtils.selectTracesFolder(fBot, TRACE_PROJECT_NAME), TRACE_NAME);
 
         traceItem.contextMenu().menu("Rename...").click();
@@ -234,7 +234,7 @@ public class ProjectExplorerTraceActionsTest {
      */
     @Test
     public void test4_05Delete() {
-        SWTBotUtils.openTrace(TRACE_PROJECT_NAME, fTestFile.getAbsolutePath(), TRACE_TYPE);
+        SWTBotUtils.openTrace(TRACE_PROJECT_NAME, fTestFile.getAbsolutePath(), CUSTOM_TEXT_LOG.getTraceType());
         SWTBotTreeItem traceItem = SWTBotUtils.getTraceProjectItem(fBot, SWTBotUtils.selectTracesFolder(fBot, TRACE_PROJECT_NAME), TRACE_NAME);
 
         traceItem.contextMenu().menu("Delete").click();
@@ -263,7 +263,7 @@ public class ProjectExplorerTraceActionsTest {
     @Test
     public void test4_06OpenKeyboard() throws WidgetNotFoundException {
         //FIXME: double opening! not testing properly!
-        SWTBotUtils.openTrace(TRACE_PROJECT_NAME, fTestFile.getAbsolutePath(), TRACE_TYPE);
+        SWTBotUtils.openTrace(TRACE_PROJECT_NAME, fTestFile.getAbsolutePath(), CUSTOM_TEXT_LOG.getTraceType());
         SWTBotTreeItem traceItem = SWTBotUtils.getTraceProjectItem(fBot, SWTBotUtils.selectTracesFolder(fBot, TRACE_PROJECT_NAME), TRACE_NAME);
         traceItem.select();
         fBot.activeShell().pressShortcut(Keystrokes.CR);
@@ -284,7 +284,7 @@ public class ProjectExplorerTraceActionsTest {
      */
     @Test
     public void test4_07DeleteKeyboard() {
-        SWTBotUtils.openTrace(TRACE_PROJECT_NAME, fTestFile.getAbsolutePath(), TRACE_TYPE);
+        SWTBotUtils.openTrace(TRACE_PROJECT_NAME, fTestFile.getAbsolutePath(), CUSTOM_TEXT_LOG.getTraceType());
         SWTBotTreeItem traceItem = SWTBotUtils.getTraceProjectItem(fBot, SWTBotUtils.selectTracesFolder(fBot, TRACE_PROJECT_NAME), TRACE_NAME);
         traceItem.select();
         fBot.activeShell().pressShortcut(Keystrokes.DELETE);
@@ -312,7 +312,7 @@ public class ProjectExplorerTraceActionsTest {
     @Test
     public void test4_08OpenDoubleClick() throws WidgetNotFoundException {
         //FIXME: double opening! not testing properly!
-        SWTBotUtils.openTrace(TRACE_PROJECT_NAME, fTestFile.getAbsolutePath(), TRACE_TYPE);
+        SWTBotUtils.openTrace(TRACE_PROJECT_NAME, fTestFile.getAbsolutePath(), CUSTOM_TEXT_LOG.getTraceType());
         SWTBotTreeItem traceItem = SWTBotUtils.getTraceProjectItem(fBot, SWTBotUtils.selectTracesFolder(fBot, TRACE_PROJECT_NAME), TRACE_NAME);
         traceItem.select();
         traceItem.doubleClick();
@@ -333,7 +333,7 @@ public class ProjectExplorerTraceActionsTest {
      */
     @Test
     public void test4_09BringToTop() {
-        SWTBotUtils.openTrace(TRACE_PROJECT_NAME, fTestFile.getAbsolutePath(), TRACE_TYPE);
+        SWTBotUtils.openTrace(TRACE_PROJECT_NAME, fTestFile.getAbsolutePath(), CUSTOM_TEXT_LOG.getTraceType());
         SWTBotTreeItem traceItem = SWTBotUtils.getTraceProjectItem(fBot, SWTBotUtils.selectTracesFolder(fBot, TRACE_PROJECT_NAME), TRACE_NAME);
         traceItem.select();
         traceItem.doubleClick();
@@ -370,7 +370,7 @@ public class ProjectExplorerTraceActionsTest {
 
     private static void testEventsTable(String editorName) {
         SWTBotEditor editor = SWTBotUtils.activeEventsEditor(fBot, editorName);
-        fBot.waitUntil(ConditionHelpers.numberOfEventsInTrace(TmfTraceManager.getInstance().getActiveTrace(), NB_EVENTS));
+        fBot.waitUntil(ConditionHelpers.numberOfEventsInTrace(TmfTraceManager.getInstance().getActiveTrace(), CUSTOM_TEXT_LOG.getNbEvents()));
 
         SWTBotTable table = editor.bot().table();
         fBot.waitUntil(new DefaultCondition() {
@@ -390,7 +390,7 @@ public class ProjectExplorerTraceActionsTest {
         editor.bot().waitUntil(new DefaultCondition() {
             @Override
             public boolean test() throws Exception {
-                return table.selection().rowCount() == 1 && table.selection().get(0).toString().contains("01:01");
+                return table.selection().rowCount() == 1 && table.selection().get(0).toString().contains(CUSTOM_TEXT_LOG.getFirst());
             }
 
             @Override
@@ -404,7 +404,7 @@ public class ProjectExplorerTraceActionsTest {
         SWTBotUtils.openView(TmfStatisticsView.ID);
         SWTBotView view = fBot.viewById(TmfStatisticsView.ID);
         assertTrue(view.bot().tree().hasItems());
-        view.bot().tree().cell(0, 1).equals(Long.toString(NB_EVENTS));
+        view.bot().tree().cell(0, 1).equals(Long.toString(CUSTOM_TEXT_LOG.getNbEvents()));
     }
 
     private final class TraceDeletedCondition extends DefaultCondition {
